introduce thread-safe program-specific logging